@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-15T01:02:38Z",
-  "count" : 5,
+  "timestamp" : "2022-06-28T08:16:56Z",
+  "count" : 4,
   "count_minmax" : [ 1, 5 ],
-  "count_decinc" : [ -0, +5 ],
+  "count_decinc" : [ -1, +5 ],
   "uniques" : 3,
   "uniques_minmax" : [ 1, 3 ],
   "uniques_decinc" : [ -0, +3 ]
