@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-28T01:05:07Z",
+  "timestamp" : "2022-06-28T08:16:56Z",
   "count_outdated" : 360,
   "uniques_outdated" : 194,
   "count" : 385,
-  "uniques" : 209,
+  "uniques" : 210,
   "clones" : [
     {
       "timestamp": "2022-06-14T00:00:00Z",
-      "count": 5,
+      "count": 4,
       "count_minmax": [ 1, 5 ],
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ]
@@ -93,6 +93,13 @@
       "timestamp": "2022-06-27T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
