@@ -1,3 +1,10 @@
+2022-06-28T08:16:56Z:
+* notice: last 14d: unq all: 3 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 194 360 / 209 385
+* notice: next accum: outdated-unq outdated-all / unq all: 194 360 / 210 385
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-14 2022-06-28]
+
 2022-06-28T01:05:07Z:
 * notice: last 14d: unq all: 3 25
 * notice: prev accum: outdated-unq outdated-all / unq all: 194 360 / 209 384
